--- a/jupyter_notebook.ipynb
+++ b/jupyter_notebook.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notebook will be mainly used for the IBM's Applied Data Science Capstone Project"
+    "### This notebook  for the IBM's Applied Data Science Capstone Project"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### @author: _salimt_"
+    "##### @author: _Pramendra_"
    ]
   },
   {
